write railpass command
Signed-off-by: Mineshafter61 <yuhang.061@gmail.com>